--- a/21-准备工作.md
+++ b/21-准备工作.md
@@ -12,11 +12,15 @@
 
 根据文字，又可以分为「汉语」、「英语」、「日语」、「韩语」等等不同语言，以专有语言为制作对象；根据布帛，又可以分为「纸张」、「玉石」、「电子屏幕」等等，以不同介质传递文字；根据组织，又可以分为「商业组织」、「非商业组织」等等，以不同经济目的所组成的人群；根据传播，又可以分为「中心化传播」、「去中心化传播」等等。
 
-所以，从说文解字的角度来看，字幕组是一个很宽泛的概念。从古至今，从西到中，这种「记录文字，传播内容」的群体或个人，是无处不在的。无论是千年前的玄奘西行，数百年前马可波罗东游，还是近代日本明治维新，林则徐睁眼看世界，亦或当今TikTok。
+所以，从说文解字的角度来看，字幕组是一个很宽泛的概念。
 
-但是这些历史被大浪淘尽，创造了一大堆废话，去描述一个本质上是一致的行为。
+但是，从历史的角度来看，字幕组的存在的本质，只有一个目的： **链接人类。**
 
-于是现在，今天，也就是2024年，提起字幕组，大多数的人第一时间都会犹豫一下，然后说出：“哦，是做卡通动漫的、（做美剧的）、「做韩剧的」啊。”
+从古至今，从西到中，「记录文字，传播内容」的群体或个人，是无处不在的。千年前的玄奘西行，数百年前马可波罗东游，近代日本明治维新，林则徐睁眼看世界，还有当今TikTok。本身而言，这些通过将不同语言的文化，通过「翻译」，让非母语受众认知、学习、理解的行为，其最终的目的就是，希望将人类的世界团结起来。
+
+可惜，这些历史被大浪淘尽，创造了一大堆虚无，去描述一个本质上是一致的行为而又不能达成目的期许。
+
+于是现在，提起字幕组，大多数的人第一时间都会犹豫一下，然后说：“就是给听不懂话的人，做看得懂的文字。”
 
 ---
 
@@ -40,7 +44,9 @@
 
 ---
 
-综上所述，我们可以下一个结论，字幕组就是「以视频介质（后简称：视频）为主要对象，**对视频中所产生的文本、文字信息，进行语言的处理**，如翻译、修正、补充说明等等，并把处理好的内容再以视频的形式导出，进行发布与传播」。
+综上所述，我们可以下一个结论，字幕组就是：
+
+#### **「以视频介质（后简称：视频）为主要对象，**对视频中所产生的文本、文字或是相关画面信息，进行语言的处理**，如翻译、修正、补充说明等等，并把处理好的内容再以视频的形式导出，进行发布与传播，以用于学习不同母语文化的桥梁」。**
 
 ### 二、字幕组做什么
 
@@ -62,24 +68,25 @@
 
 用表格的形式表示如下：
 
-| 视频信息名称                    | 对应解释                     |
-|:-------------------------:|:------------------------:|
-| [shincaps]                | 录制组的名称                   |
-| Mahou Shoujo ni Akogarete | 录制什么内容的视频                |
-| 02                        | 第二集                      |
-| AT-X                      | AT-X电视台                  |
-| 1440x1080                 | 视频分辨率为1440*1080（4：3）     |
-| MPEG2                     | 视频编码格式                   |
-| TS                        | 媒体同步获取（Telesync）         |
-| .ts                       | Transport Stream （TS传输流） |
 
-尾部的```2.0 GIB```表示其视频体积（按照底数为2的指数计算的视频体积），换算成```GB```(按照底数为10的指数计算的视频体积)为```2.048GB```
+|       视频信息名称       |           对应解释           |
+| :-----------------------: | :---------------------------: |
+|        [shincaps]        |         录制组的名称         |
+| Mahou Shoujo ni Akogarete |      录制什么内容的视频      |
+|            02            |            第二集            |
+|           AT-X           |          AT-X电视台          |
+|         1440x1080         | 视频分辨率为1440*1080（4：3） |
+|           MPEG2           |         视频编码格式         |
+|            TS            |   媒体同步获取（Telesync）   |
+|            .ts            | Transport Stream （TS传输流） |
+
+尾部的 ``2.0 GIB``表示其视频体积（按照底数为2的指数计算的视频体积），换算成 ``GB``(按照底数为10的指数计算的视频体积)为 ``2.048GB``
 
 ---
 
 为什么获取视频这么重要呢，是因为不同国家对于相同的视频，采取不同的「分级制度」，针对不同年龄段的人群，对敏感的音视频媒体或文字进行官方的「Censored」，俗称「修正」或「删减」。
 
-我们不去讨论修正的目的，仅仅从观看的角度来说，观众更希望看到「完全、具体、充实、全面」的视频内容，而不是```《断章取义》摘自《不要断章取义》```，所以，获得没有经过修正或是删减的视频源，也是一个很重要的工作。
+我们不去讨论修正的目的，仅仅从观看的角度来说，观众更希望看到「完全、具体、充实、全面」的视频内容，而不是 ``《断章取义》摘自《不要断章取义》``，所以，获得没有经过修正或是删减的视频源，也是一个很重要的工作。
 
 举个例子来说，以《憧憬成为魔法少女》为例子，不同源所对应的画面、音频都有不同，普通电视台放送有「完全修正版」、AT-X有个「音频修正版」、蓝光影碟则是「无修正版」。
 
@@ -87,7 +94,7 @@
 
 ![21-samples-6.png](https://pic.billionmetalab.eu.org/i/2024/01/13/2024-01-13-1705149061.png)
 
-国际上对**内容完全保留的源**称呼为「Uncensored」，即「无修正」，例如下面的视频源，标识出```UNCENSORED```，由于BD会晚于其它Web源，所以会默认将「**当前修正力度最小的，默认为无修片源**」。等到BD发售后，有真正意义上的「无修正版」，再进行相应的调整。
+国际上对**内容完全保留的源**称呼为「Uncensored」，即「无修正」，例如下面的视频源，标识出 ``UNCENSORED``，由于BD会晚于其它Web源，所以会默认将「**当前修正力度最小的，默认为无修片源**」。等到BD发售后，有真正意义上的「无修正版」，再进行相应的调整。
 
 例如说下面这个片源，就是以当前版本最低修正的为视频源。
 
@@ -98,13 +105,16 @@ Gushing over Magical Girls S01E02 UNCENSORED VOSTFR 1080p WEB x264 AAC -Tsundere
 
 所以，总的来说，视频获取的最终目的是：「**获取质量最佳视频**」。
 
+那么就引出了第一个问题：「哪里可以获得较好、较高的源视频呢？」
+
 #### 2. 视频的处理
 
 视频的处理，也就是对获取到的视频，进行相应的「技术性处理」，重点有以下几个部分。
 
-| 第一步   | 第二步   | 第三步  | 第四步  | 第五步  |
-| ----- | ----- | ---- | ---- | ---- |
-| 视频预处理 | 制作时间轴 | 制作字幕 | 视频压制 | 结果校对 |
+
+|   第一步   |   第二步   | 第三步   |  第四步  | 第五步   | 第六步   |  第七步  |
+| :--------: | :--------: | -------- | :------: | -------- | -------- | :------: |
+| 视频预处理 | 制作时间轴 | 制作字幕 | 字幕校对 | 视频压制 | 结果校对 | 分发准备 |
 
 我们会在接下来的时间内，相继学到每一步对应的内容。
 
@@ -116,13 +126,9 @@ Gushing over Magical Girls S01E02 UNCENSORED VOSTFR 1080p WEB x264 AAC -Tsundere
 
 因为有个很重要原因：视频只有发布了，才能证明你之前所做的。
 
+所以这就引出了另外的问题：有什么渠道发布自己制作的字幕呢？
+
 ![21-samples-7.png](https://pic.billionmetalab.eu.org/i/2024/01/13/2024-01-13-1705159916.png)
-
-否则不去分享或是传播，而是「自娱自乐」，我认为这是**爱好**而不是「劳动」。
-
-是的，字幕组所做的一切，都可以被定义为劳动。
-
-劳动最光荣，不是吗？
 
 #### 4. 其它基础知识
 
@@ -132,25 +138,19 @@ Gushing over Magical Girls S01E02 UNCENSORED VOSTFR 1080p WEB x264 AAC -Tsundere
 
 我们会在今后的文本中具体讲述某些必要的知识，在此我们稍微提及以下。
 
+- 如何获取视频源？（源视频获取的几种方式）
 - 如何下载、上传、分享视频？（qBittorrent及其服务端的简单部署与应用）
-
-- 如何处理「隔行扫描」视频？（使用MeGUI对反交错TV源的处理）
-
-- 如何压制视频源？（MeGUI、HandBrake基本用法）
-
-- 如何裁剪视频源？（MKVToolNix GUI 及 gMKVExtract GUI 的基本应用）
-
-- 如何对视频进行时间轴的制作？（Aegisub的时间轴制作）
-
+- *如何处理「隔行扫描」视频？（使用MeGUI对反交错TV源的处理）
+- 如何压制视频源？（FFmpeg、HandBrake基本用法）
+- 如何裁剪视频源？（MKVToolNix GUI 及 *gMKVExtract GUI 的基本应用）
+- 如何对视频进行时间轴的制作？（Aegisub的时间轴提取及制作）
 - 如何对视频「主要对话内容」进行翻译？（以日语为例，简述翻译提要）
-
 - 如何对视频中出现的「音乐」进行特效制作？（Aegisub简单基础特效讲解）
-
 - 如何对视频「屏幕文字」进行注解？（Aegisub基础代码讲解）
-
-- 如何将字幕压制到源视频里？（小丸工具箱236、MeGUI基本用法）
-
+- 如何将字幕压制到源视频里？（FFmpeg、MKVToolNix GUI、*小丸工具箱236基本用法）
 - 如何发布视频？（视频发布的渠道以及基础操作）
+
+（温馨提示：「*」号为 Windows的内容）
 
 在今后的文档中，我们会根据上述内容，了解并学习不同「电脑程序」及「互联网」的基本用法，以解决上述问题，达到我们最终的目的。
 
@@ -231,15 +231,10 @@ Gushing over Magical Girls S01E02 UNCENSORED VOSTFR 1080p WEB x264 AAC -Tsundere
 自我学习能力，也就是自己学习的能力，相信这一点不用我详细去说明。无论是各个国家或地区的学前教育、义务教育、高等教育、成人教育，都相应培养了人的自我学习能力。但是我还是想要单独说明一些重要的方面：
 
 - 学习的目的是为了提高个人的生产力
-
 - 学习的原因是为了开拓个人的世界观
-
 - 学习的主要方法是「掌握原理」
-
 - 学习的主要方面是「应用原理」
-
 - 学习的充分条件：时间
-
 - 学习的必要条件：从开始学习到学习结束所持续的客观时间
 
 总之，学习能够保证自身思想或是认知的先进性，同时也能更快更准适应社会需求变化，促进字幕组的良性发展。
@@ -261,6 +256,10 @@ Gushing over Magical Girls S01E02 UNCENSORED VOSTFR 1080p WEB x264 AAC -Tsundere
 #### 5. 脸比城墙厚、心比澈水清
 
 就是是标题的意思，做好自我，坚持自我；人类都是水做的，海纳百川。
+
+因为你会遇到一大堆所谓的「恶意」、「污蔑」、「差评」、「批驳」、「揣测」、「伤害」等等。
+
+而这时候的你，要么抽身而出全身而退，要么越挫越勇一往无前。
 
 ---
 
