--- a/22-电脑互联网基础入门（可忽略）.md
+++ b/22-电脑互联网基础入门（可忽略）.md
@@ -44,40 +44,41 @@
 
 这些软件的使用难度并不太大，我会通过表格具体介绍一下我所使用的软件
 
-| 软件名                 | 软件功能          | 软件地址                                                                                           |
-|:-------------------:|:-------------:|:----------------------------------------------------------------------------------------------:|
-| Microsoft Office    | 办公软件          | https://www.office.com/                                                                        |
-| LibreOffice         | 开源办公软件        | https://www.libreoffice.org/                                                                   |
-| VS Code             | 源代码编辑器        | https://code.visualstudio.com/                                                                 |
-| VLC                 | 多媒体播放器        | https://www.videolan.org/                                                                      |
-| PotPlayer           | 多媒体播放器        | https://potplayer.daum.net/                                                                    |
-| 弹弹player            | 弹幕播放器         | https://www.dandanplay.com/                                                                    |
-| 7z                  | 压缩包软件         | https://7-zip.org/                                                                             |
-| qBittorrent         | 种子下载器         | https://www.qbittorrent.org/                                                                   |
-| Torrent File Editor | 种子编辑器         | https://github.com/torrent-file-editor/torrent-file-editor                                     |
-| Chrome              | 网络游览器         | https://www.google.com/intl/zh-CN/chrome/                                                      |
-| Telegram            | 社交媒体          | https://telegram.org/                                                                          |
-| Git                 | 分布式控制软件       | https://git-scm.com/                                                                           |
-| Python              | 编程软件          | https://www.python.org/                                                                        |
-| Everything          | Windows检索软件   | https://www.voidtools.com/zh-cn/                                                               |
-| Snipaste            | 截图软件          | https://zh.snipaste.com/                                                                       |
-| SAI2                | 绘画软件          | https://www.systemax.jp/en/sai/devdept.html                                                    |
-| GIMP                | 图像编辑器         | https://www.gimp.org/                                                                          |
-| Aegisub             | 字幕处理器         | https://github.com/Aegisub/Aegisub                                                             |
-| 繁化姬                 | 简繁互译          | https://github.com/Fanhuaji                                                                    |
-| 小丸工具箱236            | 视频字幕压制软件      | [官网](https://maruko.appinn.me/) [下载链接Github](https://github.com/Seekladoom/MarukoToolBox-R236) |
-| MeGUI               | 视频字幕压制软件      | https://sourceforge.net/projects/megui/                                                        |
-| HandBrake           | 视频字幕压制软件      | https://github.com/HandBrake/HandBrake                                                         |
-| MKVToolNix GUI      | MKV制作器        | https://mkvtoolnix.download/downloads.html                                                     |
-| gMKVExtractGUI      | MKV提取器        | https://sourceforge.net/projects/gmkvextractgui/                                               |
-| Tabby               | 跨平台终端器        | https://tabby.sh/                                                                              |
-| Clash               | 网络转发工具        | [第三方平台](https://www.clash.la/releases/) <br/>源作者考虑自身安全，暂停更新                                    |
-| MarkText            | MarkDown文档编辑器 | https://github.com/marktext/marktext                                                           |
-| Fab                 | 防火墙管理工具       | https://www.sordum.org/8125/firewall-app-blocker-fab-v1-9/                                     |
-| OpenArk             | 系统程序监视器       | https://github.com/BlackINT3/OpenArk                                                           |
-| ToDesk              | 远程服务          | https://www.todesk.com/                                                                        |
-| ImHex               | 十六进制编辑器       | https://github.com/WerWolv/ImHex                                                               |
-|                     |               |                                                                                                |
+
+|       软件名       |      软件功能      |                                               软件地址                                               |
+| :-----------------: | :----------------: | :---------------------------------------------------------------------------------------------------: |
+|  Microsoft Office  |      办公软件      |                                        https://www.office.com/                                        |
+|     LibreOffice     |    开源办公软件    |                                     https://www.libreoffice.org/                                     |
+|       VS Code       |    源代码编辑器    |                                    https://code.visualstudio.com/                                    |
+|         VLC         |    多媒体播放器    |                                       https://www.videolan.org/                                       |
+|      PotPlayer      |    多媒体播放器    |                                      https://potplayer.daum.net/                                      |
+|     弹弹player     |     弹幕播放器     |                                      https://www.dandanplay.com/                                      |
+|         7z         |     压缩包软件     |                                          https://7-zip.org/                                          |
+|     qBittorrent     |     种子下载器     |                                     https://www.qbittorrent.org/                                     |
+| Torrent File Editor |     种子编辑器     |                      https://github.com/torrent-file-editor/torrent-file-editor                      |
+|       Chrome       |     网络游览器     |                               https://www.google.com/intl/zh-CN/chrome/                               |
+|      Telegram      |      社交媒体      |                                         https://telegram.org/                                         |
+|         Git         |   分布式控制软件   |                                         https://git-scm.com/                                         |
+|       Python       |      编程软件      |                                        https://www.python.org/                                        |
+|     Everything     |  Windows检索软件  |                                   https://www.voidtools.com/zh-cn/                                   |
+|      Snipaste      |      截图软件      |                                       https://zh.snipaste.com/                                       |
+|        SAI2        |      绘画软件      |                              https://www.systemax.jp/en/sai/devdept.html                              |
+|        GIMP        |     图像编辑器     |                                         https://www.gimp.org/                                         |
+|       Aegisub       |     字幕处理器     |                                  https://github.com/Aegisub/Aegisub                                  |
+|       繁化姬       |      简繁互译      |                                      https://github.com/Fanhuaji                                      |
+|    小丸工具箱236    |  视频字幕压制软件  | [官网](https://maruko.appinn.me/) [下载链接Github](https://github.com/Seekladoom/MarukoToolBox-R236) |
+|        MeGUI        |  视频字幕压制软件  |                                https://sourceforge.net/projects/megui/                                |
+|      HandBrake      |  视频字幕压制软件  |                                https://github.com/HandBrake/HandBrake                                |
+|   MKVToolNix GUI   |     MKV制作器     |                              https://mkvtoolnix.download/downloads.html                              |
+|   gMKVExtractGUI   |     MKV提取器     |                           https://sourceforge.net/projects/gmkvextractgui/                           |
+|        Tabby        |    跨平台终端器    |                                           https://tabby.sh/                                           |
+|        Clash        |    网络转发工具    |            [第三方平台](https://www.clash.la/releases/) <br/>源作者考虑自身安全，暂停更新            |
+|      MarkText      | MarkDown文档编辑器 |                                 https://github.com/marktext/marktext                                 |
+|         Fab         |   防火墙管理工具   |                      https://www.sordum.org/8125/firewall-app-blocker-fab-v1-9/                      |
+|       OpenArk       |   系统程序监视器   |                                 https://github.com/BlackINT3/OpenArk                                 |
+|       ToDesk       |      远程服务      |                                        https://www.todesk.com/                                        |
+|        ImHex        |   十六进制编辑器   |                                   https://github.com/WerWolv/ImHex                                   |
+|                    |                    |                                                                                                      |
 
 上述大概30个电脑应用程序，相对来说足够使用了，剩下的内容就是去逐步学习每个软件的具体操作。
 
@@ -157,8 +158,6 @@
 
 ### （三）、服务器——以ubuntu20.04LTS为例
 
-#### 1. 服务器基本常识
-
 服务器一说出来，肯定有很多人就会觉得非常高大上，但其实这种东西，在国外已经被年轻人玩坏了，因为服务器本质上来说，是「提供服务的机器」，所以只要能顾提供服务就可以了。
 
 也就是说，你不需要自己去购买或是建造一个物理的服务机器，可以租赁购买由专业的服务器厂商所运作的虚拟服务器。
@@ -181,4 +180,6 @@
 
 温馨提示，如果只是想要学习，建议先在地区上买个便宜的进行学习测试，再去购买优秀的。
 
+- 部署相关服务（以种子为例）
 
+这个部分其实就是一些简单的服务器的应用，本组主要以docker为主，通过docker部署相关的服务网页，例如 qBittorrent、文件管理器等服务，辅助种子的分发传播。
