--- a/mainword/01-如何获取源视频.md
+++ b/mainword/01-如何获取源视频.md
@@ -4,14 +4,13 @@
 
 1. 公开视频源网站
 
-
-|      地域      | 名称           | 网站                                         |                                                                                 简评                                                                                 |
-| :------------: | -------------- | -------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
-| Global-English | *Nyaa          | [https://nyaa.si/](https://nyaa.si/)         |          以英文、俄文为主，主流动漫源网站，地位几乎不可撼动。<br />大部分动漫源都会被发布在上面。<br />但是由于©️等原因，至今限制「新用户注册发布种子」。          |
-| Global-English | *Acgnx         | [https://www.acgnx.se](https://www.acgnx.se) |                                             以英文为主，内容多为镜像Nyaa。<br />但可以注册新用户发布种子，面对国际用户。                                             |
-|       CN       | 末日动漫资源库 | [https://share.acgnx.se]()                   |                 中文地区里「最为全面」的动漫网站。<br />部分动漫字幕组会在此创建账号，发布相关作品。<br />其同步众多动漫发布平台信息，但知名度较低。                 |
-|       CN       | 动漫花园       | [https://share.dmhy.org/]()                  |       中文地区「知名度最高」的动漫网站。<br />大部分动漫字幕组会选择在此网站，发布相关作品。<br />但由于知名度过高，出现超多模仿、镜像网站，故其经常出现Bug。       |
-|       CN       | 蜜柑计划       | [https://mikanani.me/]()                     | 中国大陆地区「知名度最高、内容较全」的动漫收录网站。<br />在这里你可以找到新番及相关源，适合动漫收录党使用。<br />但是因为介质的问题，字幕组较少直接发布在此网站上。 |
+|      地域      | 名称           | 网站                                      |                                                                           简评                                                                           |
+| :------------: | -------------- | ----------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------: |
+| Global-English | *Nyaa          | [https://nyaa.si/](https://nyaa.si/)         |          以英文、俄文为主，主流动漫源网站，地位几乎不可撼动。大部分动漫源都会被发布在上面。但是由于©️等原因，至今限制「新用户注册发布种子」。          |
+| Global-English | *Acgnx         | [https://www.acgnx.se](https://www.acgnx.se) |                                          以英文为主，内容多为镜像Nyaa。但可以注册新用户发布种子，面对国际用户。                                          |
+|       CN       | 末日动漫资源库 | [https://share.acgnx.se]()                   |                 中文地区里「最为全面」的动漫网站。部分动漫字幕组会在此创建账号，发布相关作品。其同步众多动漫发布平台信息，但知名度较低。                 |
+|       CN       | 动漫花园       | [https://share.dmhy.org/]()                  |       中文地区「知名度最高」的动漫网站。大部分动漫字幕组会选择在此网站，发布相关作品。但由于知名度过高，出现超多模仿、镜像网站，故其经常出现Bug。       |
+|       CN       | 蜜柑计划       | [https://mikanani.me/]()                     | 中国大陆地区「知名度最高、内容较全」的动漫收录网站。在这里你可以找到新番及相关源，适合动漫收录党使用。但是因为介质的问题，字幕组较少直接发布在此网站上。 |
 
 本组常用的「公开视频源网站」基本如上所示。但是对于较为稀缺的视频资源，可能需要通过「购买」的渠道获取，例如BD。
 
@@ -21,18 +20,41 @@
 
 本组常见的选取标准如下（参考）：
 
-
 | 视频名称 - 集数 | 视频画质 | 视频源 | 视频类别 | 视频编码 | 字幕种类 |
 | --------------- | -------- | ------ | -------- | -------- | -------- |
 | xxx - 01        | 1080p    | CR     | WEB-DL   | AAC      | MultiSub |
 | xxxx - 02       | 1080p    | AMZN   | WEB-DL   | -        | MultiSub |
 
-对于 HEVC 的视频编码的源，本组不建议选择，但是有的时候也可以选择（后面会提到）。
+对于 HEVC 的视频编码的源，本组不建议选择使用，但是有的时候也可以选择（后面会提到）。
 
 3. 如何将视频下载下来
 
 对于上述的内容，只是「找好了」视频，但是视频如何下载呢，这就是个问题。
 
-例如我们看到这个图片：
+例如我们看到这个：
 
 ![1753351330145](images/01-如何获取源视频/1753351330145.png)
+
+我们只需要点击 DL 的「绿色箭头」就可以下载了，但是在那之前，请先安装好：qBittorrent 软件。
+
+我们在准备工作曾经提到过相关软件，但是为了更好地避免下载到流氓安装包，所以请使用下面的版本：
+
+| 名称 | 作用     | 下载网址                                                                 |
+| ---- | -------- | ------------------------------------------------------------------------ |
+| qBEE | 下载种子 | 下载链接：[GitHub](https://github.com/c0re100/qBittorrent-Enhanced-Edition) |
+
+为什么我们推荐这款呢，因为相较与原来的 qBittorrent，这款更适合大多数人的使用习惯，以及其较为统一简单的下载安装方式，同时还可以「反吸血」。对于软件的使用，如果有不懂的内容，可以询问AI解答，或者去相关视频网站学习。
+
+然后你就会得到长串名称的视频源文件，这个时候请不要着急，因为你还没有办法打开。
+
+4. 如何观看视频
+
+为什么我会写这个呢，原因很简单，在 MacOS 上的视频播放器较为稀缺，而 Windows Player较为傻缺，所以本组推荐一些开源的播放器：
+
+| 名称      | 作用               | 下载网址                                          |
+| --------- | ------------------ | ------------------------------------------------- |
+| IINA      | MacOS 视频播放器   | 下载链接：[官网](https://iina.io)                    |
+| PotPlayer | Windows 视频播放器 | 下载链接：[官网  ](https://potplayer.info/download/) |
+| VLC       | 全平台多媒体播放器 | 下载链接：[官网](https://www.videolan.org/vlc/)      |
+
+同时，PotPlayer 还有一项很重要的功能，之后会作为补充讲解，目前在 MacOS上，只能通过Windows ARM 内置的 x86 模拟层（WOW64）强行使用potplayer，但是这部分将会作为选择进行讲解，因为这种办法只是为了解决一个小问题而已。
