--- a/mainword/01-如何获取源视频.md
+++ b/mainword/01-如何获取源视频.md
@@ -20,12 +20,22 @@
 
 本组常见的选取标准如下（参考）：
 
-| 视频名称 - 集数 | 视频画质 | 视频源 | 视频类别 | 视频编码 | 字幕种类 |
-| --------------- | -------- | ------ | -------- | -------- | -------- |
-| xxx - 01        | 1080p    | CR     | WEB-DL   | AAC      | MultiSub |
-| xxxx - 02       | 1080p    | AMZN   | WEB-DL   | -        | MultiSub |
+| 视频名称 - 集数 | 视频画质 | 视频源 | 视频类别 | 视频编码 | 字幕种类 | 视频文件大小 |
+| --------------- | -------- | ------ | -------- | -------- | -------- | ------------ |
+| xxx - 01        | 1080p    | CR     | WEB-DL   | AAC      | MultiSub | 1.3GB        |
+| xxxx - 02       | 1080p    | AMZN   | WEB-DL   | -        | MultiSub | 1.3GB        |
 
-对于 HEVC 的视频编码的源，本组不建议选择使用，但是有的时候也可以选择（后面会提到）。
+为什么要选择更大体积的视频文件呢，因为相对越大的视频文件，码率对应的就越高。
+
+从视频信息的角度将，码率越高，视频所包含的信息就更加多，所以画质会更加丰富、清晰。
+
+但是我们在分发的时候，将会进行一定的视频压制。
+
+为什么要压制呢？这个问题会在压制章节进行回答。
+
+对于 HEVC 的视频编码的源，本组不建议选择使用。
+
+但是有的时候也可以选择（例如说不想压制HEVC而直接使用现成的）。
 
 3. 如何将视频下载下来
 
