--- a/mainword/01-如何获取源视频.md
+++ b/mainword/01-如何获取源视频.md
@@ -14,6 +14,8 @@
 
 本组常用的「公开视频源网站」基本如上所示。但是对于较为稀缺的视频资源，可能需要通过「购买」的渠道获取，例如BD。
 
+上述部分网站可能在部分地区存在失联现象，请通过各类方法成功访问，再次不多赘述。
+
 2. 最为常见的视频源：[Erai-raws]
 
 对于本组来说，采用最多视频源的组，就是[Erai-raws]，你可以直接在 Acgnx 搜索 [Erai-raws] ，然后选取自己需要的视频，通过种子下载相关视频文件。
