--- a/mainword/02-如何对原视频进行预处理.md
+++ b/mainword/02-如何对原视频进行预处理.md
@@ -145,3 +145,23 @@ Progress: 100%
 这款软件是给予 FFmpeg 的一款开源视频处理软件。
 
 本组常用来压制「内封字幕的 HEVC-10bit 视频文件」。
+
+那么使用 Handbrake 很简单，只需要打开软件，选择需要压制的视频，然后开始就可以了。
+
+例如本组的配置如下：
+
+![1753416910057](images/02-如何对原视频进行预处理/1753416910057.png)
+
+![1753416923706](images/02-如何对原视频进行预处理/1753416923706.png)
+
+![1753416934447](images/02-如何对原视频进行预处理/1753416934447.png)
+
+当然你也可以去附件下载「3000.json」的文件，然后通过「预设-导入」使用，其它保持默认即可。
+
+根据使用经验，可以对「滤镜」进行微调，以适应不同的视频。
+
+这样过了一段时间后（20-40分钟），就会导出压制好的视频，一般体积多在 500-600MB 之间。
+
+4. 总结
+
+我们通过几种方式，下载了需要
