--- a/mainword/01-如何获取源视频.md
+++ b/mainword/01-如何获取源视频.md
@@ -27,7 +27,7 @@
 | xxx - 01        | 1080p    | CR     | WEB-DL   | AAC      | MultiSub | 1.3GB        |
 | xxxx - 02       | 1080p    | AMZN   | WEB-DL   | -        | MultiSub | 1.3GB        |
 
-为什么要选择更大体积的视频文件呢，因为相对越大的视频文件，码率对应的就越高。
+为什么要选择更大体积的视频文件呢，因为相对越大的视频文件，码率对应的就越高，这样在理论上能得到更多视频信息。
 
 从视频信息的角度将，码率越高，视频所包含的信息就更加多，所以画质会更加丰富、清晰。
 
@@ -55,13 +55,20 @@
 | ---- | -------- | ------------------------------------------------------------------------ |
 | qBEE | 下载种子 | 下载链接：[GitHub](https://github.com/c0re100/qBittorrent-Enhanced-Edition) |
 
-为什么我们推荐这款呢，因为相较与原来的 qBittorrent，这款更适合大多数人的使用习惯，以及其较为统一简单的下载安装方式，同时还可以「反吸血」。对于软件的使用，如果有不懂的内容，可以询问AI解答，或者去相关视频网站学习。
+为什么我们推荐这款呢，因为相较与原来的 qBittorrent，这款更适合大多数人的使用习惯，以及其较为统一简单的下载安装方式，同时还可以「反吸血」，其自带可以更新的trackers list，相较于官方版本更加适合小白使用，不仅提高了用户下载的trackers链接数，更有利于项目做种，同时屏蔽了迅雷吸血。本组虽然没有屏蔽迅雷吸血下载，但明确反对使用迅雷下载本字幕组资源（一般字幕组都会屏蔽掉迅雷以防止其吸血，具体原因可Google搜索）。
+
+对于软件的使用，如果有不懂的内容，可以询问AI解答，或者去相关视频网站学习。
 
 然后你就会得到长串名称的视频源文件，这个时候请不要着急，因为你还没有办法打开。
 
+---
+
+至此你已经学会了如何获取源视频，但是我们获取到的源视频，是无法保证一定可以观看的，因为「BT」的断点续传以及切分的特性，可能会导致视频正常观看，这个时候，我们就要检验视频是否存在画面损坏。那么一种最为简单的方法，就是观看视频。这就引出了这一章的最后一个问题：如何观看视频。
+
+
 4. 如何观看视频
 
-为什么我会写这个呢，原因很简单，在 MacOS 上的视频播放器较为稀缺，而 Windows Player较为傻缺，所以本组推荐一些开源的播放器：
+为什么我会写这个呢，原因很简单，在 MacOS 上的视频播放器较为稀缺，而 Windows Player 较为傻缺，所以本组推荐一些开源的播放器：
 
 | 名称      | 作用               | 下载网址                                          |
 | --------- | ------------------ | ------------------------------------------------- |
@@ -69,4 +76,4 @@
 | PotPlayer | Windows 视频播放器 | 下载链接：[官网  ](https://potplayer.info/download/) |
 | VLC       | 全平台多媒体播放器 | 下载链接：[官网](https://www.videolan.org/vlc/)      |
 
-同时，PotPlayer 还有一项很重要的功能，之后会作为补充讲解，目前在 MacOS上，只能通过Windows ARM 内置的 x86 模拟层（WOW64）强行使用potplayer，但是这部分将会作为选择进行讲解，因为这种办法只是为了解决一个小问题而已。
+同时，PotPlayer 还有一项很重要的功能，之后会作为补充讲解，这种问题目前在 MacOS上，只能通过Windows ARM 内置的 x86 模拟层（WOW64）强行使用potplayer，但是这部分将会作为选择进行讲解，因为这种办法只是为了解决一个小问题而已，我们有其它的方法能够解决相关问题。
