--- a/mainword/02-如何对原视频进行预处理.md
+++ b/mainword/02-如何对原视频进行预处理.md
@@ -46,7 +46,7 @@ brew install --cask mkvtoolnix
 
 首先，介绍一种比较通用的方法。
 
-在 MacOS 中，在制定文件夹下调用 Termianl 的方法，一般选中文件夹，然后按下图所示：
+在 MacOS 中，在指定文件夹下调用 Termianl 的方法，一般选中文件夹，然后按下图所示：
 
 ![1753372836410](images/02-如何对原视频进行预处理/1753372836410.png)
 
@@ -95,7 +95,13 @@ Attachment ID 7: type 'application/x-truetype-font', size 867988 bytes, file nam
 
 而 Attachment 则表示「附件」，而这些给出的附件都是「.ttf」结尾的，说明是字体文件，一般情况下用不到。
 
-而提取音频和字幕，只需要再输入一行命令：
+---
+
+而一种简单的方式，就是打开mkvtoolnix的软件，然后把视频文件拖入到infotool里面，就能详细查看更多的信息，例如我们可能需要的「语言标签」，可以轻松判断对应内容的国际语言，例如下面这张图片。
+
+![1756643192860](images/02-如何对原视频进行预处理/1756643192860.png)
+
+而提取音频和字幕，在mac上只能通过命令行实现，即再输入一行命令：
 
 输入：
 
@@ -119,11 +125,11 @@ Progress: 100%
 
 至此，我们所需要的内容已经准备好时轴和音频，接下来才是重点和难点。
 
-3. 压制 HEVC 视频
+3. 压制出 HEVC 视频
 
-这里就就提到了 HEVC 视频了！还记得我们在 01 讲的，不建议下载 HEVC 的版本源吗？
+这里就提到了 HEVC 视频了！还记得我们在 01 讲的，不建议下载 HEVC 的版本源吗？
 
-对于一些机器性能较差的组来说，直接使用体积适中、完成度高的 HEVC 版本源，然后分装好字幕即可。
+对于一些机器性能较差，或者无法考虑压制的组来说，直接使用体积适中、完成度高的 HEVC 版本源，然后封装好字幕即可。
 
 例如：
 
@@ -131,18 +137,18 @@ Progress: 100%
 [Erai-raws] Turkey - 03 [1080p CR WEBRip HEVC AAC][MultiSub][25231541].mkv (466.6 MiB)
 ```
 
-可以直接下载，然后准备在内封字幕的时候使用。
+直接下载后，根据上述方式，提取出已经压制好的视频、音频，再把做好的字幕内封进去即可使用。
 
-但是我们想要自行压制，我们应该如何操作呢？
+**但是我们想要自行压制，我们应该如何操作呢？**
 
-那么就又又又来一个新软件了：Handbrake
+那么就又又又来一个新软件了：Handbrake 和 ffmpeg
 
 | 名称      | 简介                 | 链接                                 |
 | --------- | -------------------- | ------------------------------------ |
 | Handbrake | 跨平台视频压制软件   | 下载链接：[官网](https://handbrake.fr/) |
 | FFmpeg    | 跨平台多媒体处理攻击 | homebrew                             |
 
-这款软件是给予 FFmpeg 的一款开源视频处理软件。
+Handbrake 是一款通过使用 FFmpeg 的开源视频处理软件，也就是说，本质上handbrake等效于FFmpeg。
 
 本组常用来压制「内封字幕的 HEVC-10bit 视频文件」。
 
@@ -156,12 +162,42 @@ Progress: 100%
 
 ![1753416934447](images/02-如何对原视频进行预处理/1753416934447.png)
 
-当然你也可以去附件下载「3000.json」的文件，然后通过「预设-导入」使用，其它保持默认即可。
+当然你也可以去把上述配置保存为附件下载，例如我会根据码率确定生成「3000.json」文件（本组常用的码率一般有2048、3000、4096、5000），然后通过「预设-导入」使用，其它保持和上述相同即可即可。
 
-根据使用经验，可以对「滤镜」进行微调，以适应不同的视频。
+根据使用经验，可以对「滤镜」进行微调，以适应不同的视频，例如真人剧的压制。
 
-这样过了一段时间后（20-40分钟），就会导出压制好的视频，一般体积多在 500-600MB 之间。
+这样过了一段时间后（20-40分钟），就会导出压制好的视频，一般体积多在 400-600MB 之间。
+
+---
+
+
+
+那么上述是压制 HEVC 视频的，为什么压制这种视频呢？
+
+有的人说是更好的压制格式带来更小的体积及更优质的画面，从而推进视频编码进步的可能。
+
+当我认为这种不过肤浅的表征，而非核心——内封！
+
+原因很简单，字幕的开源精神才是最为重要的。一般来说，如果字幕组发布了 HEVC 内封/外挂 的视频，其实相当于默认字幕组公开授权字幕开源，但同时需要遵守字幕组的开源协议。
+
+当然，不同字幕组对于字幕是否开源都有各自的见解，有的组认为「字幕是字幕组劳动的结晶，这种劳动结晶属于创作的一种，自然受到版权的保护，所以拒绝开源，或是未经授权擅自使用等」。
+
+我无法评价他们的观点，因为并无问题。但至少仍有组能开源字幕，那么本组一直会是后者。
 
 4. 总结
 
-我们通过几种方式，下载了需要
+我们通过上述方式，将字幕制作的视频，做好了预先处理。但是我们面临的问题是：这些处理足够吗？
+
+其实是不够的，但是上述的处理方式是「视频预处理的主干」，也就是通用方法。
+
+而其他的内容，就是用来上述步骤中，无法解决的问题，当然等到你遇到了这些内容，可以翻看之后的补充部份。
+
+我们已经准备好了如下内容：
+
+| 1             | 2                   | 3                       | 3                |
+| ------------- | ------------------- | ----------------------- | ---------------- |
+| 源视频（mkv） | 源视频音频轴（AAC） | 源视频字幕时间轴（ASS） | 压制好的HEVC视频 |
+
+这个时候，我们就可以开始我们最为重要的环节：音频轴对应的脚本（文本）。
+
+也就是在中国观众里常被人探讨、批判的一个东西：日语字幕。
